--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,14 +22,6 @@ button, a.button {
   cursor: pointer;
   transition: all var(--transition-timing);
 }
-button:hover,
-a.button:hover {
-  background: var(--theme-font-accent);
-  color: var(--theme-bg-accent);
-  border-color: var(--theme-font-accent);
-  box-shadow: 0 0.15rem 0.5rem var(--theme-border);
-  transform: scale(1.05);
-}
 button:active,
 a.button:active,
 button:focus,
@@ -123,6 +115,17 @@ section.section-green {
   box-shadow: 0 0 0.5rem var(--theme-shadow);
 }
 
+@media(hover: hover) and (pointer: fine) {
+  button:hover,
+  a.button:hover {
+    background: var(--theme-font-accent);
+    color: var(--theme-bg-accent);
+    border-color: var(--theme-font-accent);
+    box-shadow: 0 0.15rem 0.5rem var(--theme-border);
+    transform: scale(1.05);
+  }
+}
+
 @media(min-width:768px) {
   .wrapper {
     display: flex;
@@ -162,7 +165,9 @@ section.section-green {
     border-color: var(--theme-font-accent);
   }
   a.button.download {
-    margin: 1.5rem 0 2rem;
+    margin: 1.5rem 0 0;
+    position: relative;
+    z-index: 1;
   }
   .headshot {
     margin: 0 1rem;
